feat(checkin-checkout): add filter by date for both walkin and member DataGRid

--- a/Views/CheckInOutView.axaml
+++ b/Views/CheckInOutView.axaml
@@ -68,7 +68,7 @@
                                     VerticalAlignment="Top"
                                     Margin="0,-2"
                                     shadui:ControlAssist.Label="Date Today"
-                                    SelectedDate="{x:Static system:DateTime.Today}"
+                                    SelectedDate="{CompiledBinding SelectedDate}"
                                     IsEnabled="True" />
                                 <Button
                                     Classes="Primary"
@@ -234,7 +234,7 @@
                                     VerticalAlignment="Top"
                                     Margin="0,-2"
                                     shadui:ControlAssist.Label="Date Today"
-                                    SelectedDate="{x:Static system:DateTime.Today}"
+                                    SelectedDate="{CompiledBinding SelectedDate}"
                                     IsEnabled="True" />
                                 <Button
                                     Classes="Primary"
