feat(training-schedules): implement a date filtering functionality to handle different schedule dates per data

--- a/Views/TrainingSchedulesView.axaml
+++ b/Views/TrainingSchedulesView.axaml
@@ -142,7 +142,7 @@
                                 GridLinesVisibility="All"
                                 HeadersVisibility="Column"
                                 IsReadOnly="True"
-                                ItemsSource="{CompiledBinding ScheduledClients}"
+                                ItemsSource="{CompiledBinding ScheduledPeople}"
                                 SelectionMode="Single">
 
                                 <DataGrid.Resources>
