--- a/Components/ChangeScheduleDialog/ChangeScheduleDialogCard.axaml
+++ b/Components/ChangeScheduleDialog/ChangeScheduleDialogCard.axaml
@@ -26,59 +26,62 @@
         <SolidColorBrush x:Key="PrimaryColor50" Color="#2C2F36" Opacity="0.50" />
         <SolidColorBrush x:Key="PrimaryColor10" Color="#2C2F36" Opacity="0.10" />
     </UserControl.Resources>
-    
-    <Border
-        Background="{DynamicResource BackgroundColor}"
-        BorderBrush="{DynamicResource BorderColor}"
-        BorderThickness="1"
-        Padding="30">
-        <StackPanel>
-            <shadui:CardTitle Content="Change Training Schedule" />
-            <shadui:CardDescription Content="This will update the current schedule with a new one" />
-            <StackPanel Width="280" Spacing="20" Margin="0,30,0,0" HorizontalAlignment="Center">
-                <CalendarDatePicker
-                    shadui:ControlAssist.Label="Scheduled Date"
-                    SelectedDate="{CompiledBinding SelectedTrainingDate}"/>
-                <TimePicker 
-                    shadui:ControlAssist.Label="Start Time"
-                    SelectedTime="{CompiledBinding StartTime, Converter={x:Static converters:TimeOnlyToTimeSpanConverter.Instance}}"/>
-                <TimePicker 
-                    shadui:ControlAssist.Label="End Time"
-                    SelectedTime="{CompiledBinding EndTime, Converter={x:Static converters:TimeOnlyToTimeSpanConverter.Instance}}"/>
+
+    <DockPanel LastChildFill="True">
+        <Border
+            DockPanel.Dock="Top"
+            Background="{DynamicResource BackgroundColor}"
+            BorderBrush="{DynamicResource BorderColor}"
+            Padding="30">
+            <StackPanel>
+                <shadui:CardTitle Content="Change Training Schedule" />
+                <shadui:CardDescription Content="This will update the current schedule with a new one" />
+                <StackPanel Width="280" Spacing="20" Margin="0,30,0,0" HorizontalAlignment="Center">
+                    <CalendarDatePicker
+                        shadui:ControlAssist.Label="Scheduled Date"
+                        SelectedDate="{CompiledBinding SelectedTrainingDate}" />
+                    <TimePicker
+                        shadui:ControlAssist.Label="Start Time"
+                        SelectedTime="{CompiledBinding StartTime, Converter={x:Static converters:TimeOnlyToTimeSpanConverter.Instance}}" />
+                    <TimePicker
+                        shadui:ControlAssist.Label="End Time"
+                        SelectedTime="{CompiledBinding EndTime, Converter={x:Static converters:TimeOnlyToTimeSpanConverter.Instance}}" />
+                </StackPanel>
             </StackPanel>
-            <StackPanel 
-                Orientation="Horizontal" 
-                HorizontalAlignment="Right" 
-                VerticalAlignment="Bottom"
-                Spacing="15" 
-                Margin="0,30,0,0">
-                <Button 
-                    Classes="Destructive"
-                    Command="{CompiledBinding DiscardCommand}">
-                    <StackPanel Orientation="Horizontal">
-                        <Svg
-                            Width="20"
-                            Height="20"
-                            Path="avares://AHON_TRACK/Assets/TrainingSchedulesView/discard-icon.svg"
-                            Margin="0,0,7,0"
-                            VerticalAlignment="Center" />
-                        <TextBlock Text="Discard" VerticalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
-                <Button 
-                    Classes="Primary"
-                    Command="{CompiledBinding SaveCommand}">
-                    <StackPanel Orientation="Horizontal">
-                        <Svg
-                            Width="20"
-                            Height="20"
-                            Path="avares://AHON_TRACK/Assets/TrainingSchedulesView/save-icon.svg"
-                            Margin="0,0,7,0"
-                            VerticalAlignment="Center" />
-                        <TextBlock Text="Save" VerticalAlignment="Center"/>
-                    </StackPanel>
-                </Button>
-            </StackPanel>
+        </Border>
+        <StackPanel
+            DockPanel.Dock="Bottom"
+            Orientation="Horizontal"
+            HorizontalAlignment="Right"
+            VerticalAlignment="Bottom"
+            Spacing="15"
+            Margin="0,0,30,15">
+            <Button
+                Classes="Destructive"
+                Command="{CompiledBinding DiscardCommand}">
+                <StackPanel Orientation="Horizontal">
+                    <Svg
+                        Width="20"
+                        Height="20"
+                        Path="avares://AHON_TRACK/Assets/TrainingSchedulesView/discard-icon.svg"
+                        Margin="0,0,7,0"
+                        VerticalAlignment="Center" />
+                    <TextBlock Text="Discard" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
+            <Button
+                Classes="Primary"
+                Command="{CompiledBinding SaveCommand}">
+                <StackPanel Orientation="Horizontal">
+                    <Svg
+                        Width="20"
+                        Height="20"
+                        Path="avares://AHON_TRACK/Assets/TrainingSchedulesView/save-icon.svg"
+                        Margin="0,0,7,0"
+                        VerticalAlignment="Center" />
+                    <TextBlock Text="Save" VerticalAlignment="Center" />
+                </StackPanel>
+            </Button>
         </StackPanel>
-    </Border>
+    </DockPanel>
 </UserControl>
